# pomodoro

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.next/: trace
.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: a04e9a23f091da2b.webpack.hot-update.json  webpack.00ad0466decc1269.hot-update.js  webpack.00c3f5f7d301a9cf.hot-update.js  webpack.00da6a22f1dbd4c9.hot-update.js  webpack.03e0fc25453b540a.hot-update.js  webpack.043b05c56552e7fd.hot-update.js  webpack.04d0806db4fad995.hot-update.js  webpack.0518d426076a9b65.hot-update.js  webpack.05abc77c04ffd3fb.hot-update.js  webpack.063866b37e619b58.hot-update.js  webpack.069c194774e2d3ad.hot-update.js  webpack.06cc7dc805e03e7b.hot-update.js  webpack.08b552b35f4b97ec.hot-update.js  webpack.09a44b1e85d6cc16.hot-update.js  webpack.09edc973caf81db0.hot-update.js  webpack.0c471a46c130b00a.hot-update.js  webpack.0d36c2b2e164a25b.hot-update.js  webpack.0d3a0ad9b5643e99.hot-update.js  (+193 more)
backend/: Cargo.toml  Dockerfile  README.Docker.md  compose.yaml  fly.toml
backend/app/: Cargo.toml
backend/app/src/: lib.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: page.tsx
src/layouts/: DashboardLayout.tsx  PageLayout.tsx
src/router/: index.ts
(+251 files in other folders)
