[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-valid = "0.19.0"
serde = { version = "1.0.208", features = ["derive"] }
sea-orm = { version = "1.0.0-rc.5", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlx-postgres",
] }
